--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Index.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Index.cshtml
@@ -9,6 +9,7 @@
     var classEdit = (await AuthManager.IsAuthorizedAsync(User, SysClaims.User.Update)) ? "" : "disabled";
 }
 
+<partial name="_ButtonSvgs" />
 <div class="row align-items-center">
     <div class="col-lg-4">
         <h2>@ViewData["Title"]</h2>
@@ -24,7 +25,7 @@
             <a class="@classCreate" asp-page="Create">Create New</a>
         </p>
 
-        <table class="table table-sm">
+        <table class="table table-sm w-100 opacity-0">
             <thead>
                 <tr>
                     <th>
@@ -65,9 +66,15 @@
                             @Html.DisplayFor(modelItem => item.AccessFailedCount)
                         </td>
                         <td>
-                            <a class="@classEdit" asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                            <a class="@classDetails" asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                            <a class="@classDelete" asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                            <a class="ac-icon-button @classEdit" asp-page="./Edit" asp-route-id="@item.Id" title="Edit">
+                                <svg><use href="#pencil-square"></use></svg>
+                            </a>
+                            <a class="ac-icon-button @classDetails" asp-page="./Details" asp-route-id="@item.Id" title="View">
+                                <svg><use href="#binoculars"></use></svg>
+                            </a>
+                            <a class="ac-icon-button @classDelete" asp-page="./Delete" asp-route-id="@item.Id" title="Delete">
+                                <svg><use href="#trash"></use></svg>
+                            </a>
                         </td>
                     </tr>
                 }
@@ -79,6 +86,19 @@
 @section scripts {
 
     <script defer>
-        $('table').DataTable();
+        var $table = $('table');
+
+        $table.DataTable({
+            initComplete: function (settings, json) {
+                $table.removeClass('opacity-0');
+            },
+            columnDefs: [
+                {
+                    target: 3,
+                    render: DataTable.render.datetime('MM/dd/yyyy hh:mm:ss a'),
+                    type: 'date'
+                }
+            ]
+        });
     </script>
 }
