--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Index.cshtml.css
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Index.cshtml.css
@@ -1,9 +1,8 @@
-﻿.col-properties {
+﻿.ac-col-properties {
     min-width: 25rem;
     max-width: 30rem;
 }
 
-.col-roles {
+.ac-col-roles {
     min-width: 25rem;
 }
-
