--- a/Authorization.Core.UI.Test.Web/Areas/Admin/Pages/Shared/_Layout.cshtml
+++ b/Authorization.Core.UI.Test.Web/Areas/Admin/Pages/Shared/_Layout.cshtml
@@ -1,51 +1,59 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="auto">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Authorization.Core.UI.Test.Web</title>
     <link rel="stylesheet" type="text/css" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/_content/CRFricke.Authorization.Core.UI/lib/datatables/datatables.min.css" asp-append-version="true" />
+    <link rel="stylesheet" type="text/css" href="~/css/theme-picker.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/Authorization.Core.UI.Test.Web.styles.css" asp-append-version="true" />
+
+    @* This script needs to be in head section to prevent screen flickering when page is loaded. *@
+    <script src="~/js/theme-picker.js"></script>
 </head>
 <body>
+    <partial name="_ThemePickerSvgs" />
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
+        <nav class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
+            <div class="container-fluid align-items-center">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Authorization.Core.UI.Test.Web</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between" id="navbarSupportedContent">
+                    <ul class="navbar-nav flex-grow-1 align-items-center me-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-page="/Index">Home</a>
+                            <a class="nav-link" asp-area="Admin" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-page="/Calendar/Index">Calendar</a>
+                            <a class="nav-link" asp-area="Admin" asp-page="/Calendar/Index">Calendar</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Authorization" asp-page="/Role/Index">Role</a>
+                            <a class="nav-link" asp-area="Authorization" asp-page="/Role/Index">Role</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Authorization" asp-page="/User/Index">User</a>
+                            <a class="nav-link" asp-area="Authorization" asp-page="/User/Index">User</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
+                    <ul class="navbar-nav">
+                        <partial name="_ThemePickerPartial" />
+                    </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="container-fluid">
             &copy; @DateTime.Now.Year - Authorization.Core.UI.Test.Web - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
@@ -53,6 +61,7 @@
     <script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
     <script type="text/javascript" src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     <script type="text/javascript" src="~/_content/CRFricke.Authorization.Core.UI/lib/datatables/datatables.min.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.25.0/luxon.min.js"></script>
     <script type="text/javascript" src="~/js/site.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
