--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Create.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Create.cshtml
@@ -13,27 +13,26 @@
 <form id="formCreate" method="post">
     <div class="row">
         <div asp-validation-summary="ModelOnly" class="col-12 text-danger"></div>
-        <div class="col col-properties me-sm-5 mb-3">
+        <div class="col ac-col-properties me-sm-5 mb-3">
             <h5 class="text-muted">Enter the role's details:</h5>
             <hr />
             <div class="form-floating">
-                <input asp-for="RoleModel.Name" class="form-control" aria-required="true"/>
+                <input asp-for="RoleModel.Name" class="form-control" placeholder="" aria-required="true" />
                 <label asp-for="RoleModel.Name" class="control-label"></label>
                 <span asp-validation-for="RoleModel.Name" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <textarea class="form-control textarea-tall" id="RoleModel_Description" name="RoleModel.Description">@Model.RoleModel.Description</textarea>
+                <textarea class="form-control ac-textarea-tall" id="RoleModel_Description" name="RoleModel.Description" 
+                    placeholder="">@Model.RoleModel.Description</textarea>
                 <label asp-for="RoleModel.Description" class="control-label"></label>
                 <span asp-validation-for="RoleModel.Description" class="text-danger"></span>
             </div>
-            <div class="row d-none d-sm-block align-items-center mt-3">
-                <div class="col-auto">
-                    <input class="btn btn-primary" id="btnCreate" type="submit" value="Create" />
-                    <a class="btn btn-secondary" asp-page="Index">Cancel</a>
-                </div>
+            <div class="d-none d-sm-flex ac-button-footer mt-3">
+                <input class="btn btn-primary" id="btnCreate" type="submit" value="Create" />
+                <a class="btn btn-secondary" asp-page="Index">Cancel</a>
             </div>
         </div>
-        <div class="col col-claims">
+        <div class="col ac-col-claims">
             <h5 class="text-muted text-center mb-3">Select the role's claim assignments:</h5>
             <hr />
             <div class="mx-auto">
@@ -64,11 +63,9 @@
                     </tbody>
                 </table>
             </div>
-            <div class="row d-block d-sm-none align-items-center mt-3">
-                <div class="col-auto">
-                    <input class="btn btn-primary" id="btnCreate" type="submit" value="Create" />
-                    <a class="btn btn-secondary" asp-page="Index">Cancel</a>
-                </div>
+            <div class="d-flex d-sm-none ac-button-footer mt-3">
+                <input class="btn btn-primary" id="btnCreate" type="submit" value="Create" />
+                <a class="btn btn-secondary" asp-page="Index">Cancel</a>
             </div>
         </div>
     </div>
