--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Delete.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Delete.cshtml
@@ -24,7 +24,7 @@
 <form id="formDelete" method="post">
     <div class="row">
         <div asp-validation-summary="ModelOnly" class="col-12 text-danger"></div>
-        <div class="col col-properties me-sm-5 mb-3">
+        <div class="col ac-col-properties me-sm-5 mb-3">
             <h5 class="text-muted">The role's properties:</h5>
             <hr />
             <input type="hidden" asp-for="RoleModel.IsSystemRole" />
@@ -38,19 +38,17 @@
                 <label asp-for="RoleModel.Name" class="control-label"></label>
             </div>
             <div class="form-floating mb-3">
-                <textarea class="form-control textarea-tall" disabled>@Model.RoleModel.Description</textarea>
+                <textarea class="form-control ac-textarea-tall" disabled>@Model.RoleModel.Description</textarea>
                 <label asp-for="RoleModel.Description" class="control-label"></label>
             </div>
             <div>
             </div>
-            <div class="row d-none d-sm-block align-items-center mt-3">
-                <div class="col-auto">
-                    <input class="btn btn-primary" id="btnDelete" type="submit" value="Delete" @btnDeleteAttr />
-                    <a class="btn btn-secondary" asp-page="Index">Cancel</a>
-                </div>
+            <div class="d-none d-sm-flex ac-button-footer mt-3">
+                <input class="btn btn-primary" id="btnDelete" type="submit" value="Delete" @btnDeleteAttr />
+                <a class="btn btn-secondary" asp-page="Index">Cancel</a>
             </div>
         </div>
-        <div class="col col-users">
+        <div class="col ac-col-users">
             <h5 class="text-muted text-center mb-3">Users assigned to this role:</h5>
             <hr />
             <div class="mx-auto">
@@ -78,11 +76,9 @@
                     </tbody>
                 </table>
             </div>
-            <div class="row d-block d-sm-none align-items-center mt-3">
-                <div class="col-auto">
-                    <input class="btn btn-primary" id="btnDelete" type="submit" value="Delete" @btnDeleteAttr />
-                    <a class="btn btn-secondary" asp-page="Index">Cancel</a>
-                </div>
+            <div class="d-flex d-sm-none ac-button-footer mt-3">
+                <input class="btn btn-primary" id="btnDelete" type="submit" value="Delete" @btnDeleteAttr />
+                <a class="btn btn-secondary" asp-page="Index">Cancel</a>
             </div>
         </div>
     </div>
