--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Delete.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Delete.cshtml
@@ -15,7 +15,7 @@
     <div class="col-sm-4">
         <h3>@ViewData["Title"]</h3>
     </div>
-    <div class="col text-danger">
+    <div class="col text-danger ac-warning-message">
         <h5>@message</h5>
     </div>
     <div class="col-12">
@@ -25,7 +25,7 @@
 <form id="formDelete" method="post">
     <div class="row">
         <div asp-validation-summary="ModelOnly" class="col-12 text-danger"></div>
-        <div class="col-auto col-properties me-sm-5 mb-3">
+        <div class="col-auto ac-col-properties me-sm-5 mb-3">
             <h5 class="text-muted">Update the user's details:</h5>
             <hr />
             <input type="hidden" asp-for="UserModel.IsSystemUser" />
@@ -35,7 +35,7 @@
                 <label asp-for="UserModel.Id" class="control-label"></label>
             </div>
             <div class="form-floating">
-                <input class="form-control" id="UserModel_Email" type="text" value="@Model.UserModel.Email" disabled />
+                <input class="form-control ac-hide-lastpass" id="UserModel_Email" type="text" value="@Model.UserModel.Email" disabled />
                 <label asp-for="UserModel.Email" class="control-label"></label>
             </div>
             <div class="form-floating">
@@ -82,14 +82,12 @@
                     @Html.DisplayNameFor(model => model.UserModel.LockoutEnabled)
                 </label>
             </div>
-            <div class="row">
-                <div class="col-auto d-none d-sm-block align-items-center mt-3">
-                    <input class="btn btn-primary" id="btnDelete" type="submit" value="Delete" @btnDeleteAttr />
-                    <a class="btn btn-secondary" asp-page="./Index">Cancel</a>
-                </div>
+            <div class="d-none d-sm-flex ac-button-footer mt-3">
+                <input class="btn btn-primary" id="btnDelete" type="submit" value="Delete" @btnDeleteAttr />
+                <a class="btn btn-secondary" asp-page="./Index">Cancel</a>
             </div>
         </div>
-        <div class="col col-roles mb-3">
+        <div class="col ac-col-roles mb-3">
             <h5 class="text-muted text-center mb-3">Select the user's role assignments:</h5>
             <hr />
             <div class="mx-auto">
