Use Bootstrap icons for button links instead of svgs.

--- a/Authorization.Core.UI.Test.Web/Areas/Admin/Pages/Shared/_Layout.cshtml
+++ b/Authorization.Core.UI.Test.Web/Areas/Admin/Pages/Shared/_Layout.cshtml
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Authorization.Core.UI.Test.Web</title>
-    <link rel="stylesheet" type="text/css" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
+    <link rel="stylesheet" type="text/css" href="~/_content/CRFricke.Authorization.Core.UI/lib/bootstrap/css/bootstrap.min.css" asp-append-version="true" />
+    <link rel="stylesheet" type="text/css" href="~/_content/CRFricke.Authorization.Core.UI/lib/bootstrap/font/bootstrap-icons.min.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/_content/CRFricke.Authorization.Core.UI/lib/datatables/datatables.min.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/css/theme-picker.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/css/site.css" asp-append-version="true" />
@@ -61,7 +62,7 @@
     <script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
     <script type="text/javascript" src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     <script type="text/javascript" src="~/_content/CRFricke.Authorization.Core.UI/lib/datatables/datatables.min.js" asp-append-version="true"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.25.0/luxon.min.js"></script>
+    <script type="text/javascript" src="~/_content/CRFricke.Authorization.Core.UI/lib/luxon/luxon.min.js" asp-append-version="true"></script>
     <script type="text/javascript" src="~/js/site.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
