--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Index.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Index.cshtml
@@ -46,15 +46,12 @@
                             @Html.DisplayFor(modelItem => item.Description)
                         </td>
                         <td>
-                            <a class="ac-icon-button @classEdit" asp-page="./Edit" asp-route-id="@item.Id" title="Edit">
-                                <svg><use href="#pencil-square"></use></svg>
-                            </a>
-                            <a class="ac-icon-button @classDetails" asp-page="./Details" asp-route-id="@item.Id" title="View">
-                                <svg><use href="#binoculars"></use></svg>
-                            </a>
-                            <a class="ac-icon-button @classDelete" asp-page="./Delete" asp-route-id="@item.Id" title="Delete">
-                                <svg><use href="#trash"></use></svg>
-                            </a>
+                            <a class="bi bi-pencil-square ac-icon-button @classEdit"
+                               asp-page="./Edit" asp-route-id="@item.Id" title="Edit" aria-label="Edit" />
+                            <a class="bi bi-binoculars ac-icon-button @classDetails"
+                               asp-page="./Details" asp-route-id="@item.Id" title="View" aria-label="View" />
+                            <a class="bi bi-trash ac-icon-button @classDelete"
+                               asp-page="./Delete" asp-route-id="@item.Id" title="Delete" aria-label="Delete" />
                         </td>
                     </tr>
                 }
