--- a/Authorization.Core.UI/assets/BS5/css/site.css
+++ b/Authorization.Core.UI/assets/BS5/css/site.css
@@ -1,7 +1,4 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-.ac-button-footer {
+﻿.ac-button-footer {
     align-items: center !important;
     column-gap: 1rem !important;
     justify-content: center !important;
@@ -17,14 +14,10 @@ for details on configuring this project to bundle and minify static web assets. 
 
 .ac-icon-button {
     display: inline-block;
-    width: 1.2rem;
-    height: 1.2rem;
+    font-size: 1.2rem;
     margin-right: .5rem;
 }
 
-.ac-icon-button > svg {
-    vertical-align: sub;
-    background-size: 1.2rem 1.2rem;
-    width: 1.2rem;
-    height: 1.2rem;
+.ac-icon-button::before {
+    vertical-align: baseline;
 }
