--- a/Authorization.Core.UI/assets/BS5/css/site.css
+++ b/Authorization.Core.UI/assets/BS5/css/site.css
@@ -15,7 +15,7 @@
 .ac-icon-button {
     display: inline-block;
     font-size: 1.2rem;
-    margin-right: .5rem;
+    margin-left: .5rem;
 }
 
 .ac-icon-button::before {
