Mobile-first layout changes.

--- a/Authorization.Core.UI.Test.Web/Areas/Admin/Pages/Shared/_Layout.cshtml
+++ b/Authorization.Core.UI.Test.Web/Areas/Admin/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Authorization.Core.UI.Test.Web</title>
+    <title>@ViewData["Title"] - Authorization.Core.Test.Web</title>
     <link rel="stylesheet" type="text/css" href="~/_content/CRFricke.Authorization.Core.UI/lib/bootstrap/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/_content/CRFricke.Authorization.Core.UI/lib/bootstrap/font/bootstrap-icons.min.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="~/_content/CRFricke.Authorization.Core.UI/lib/datatables/datatables.min.css" asp-append-version="true" />
@@ -17,15 +17,15 @@
 <body>
     <partial name="_ThemePickerSvgs" />
     <header>
-        <nav class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-toggleable-lg border-bottom box-shadow mb-3">
             <div class="container-fluid align-items-center">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Authorization.Core.UI.Test.Web</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Authorization.Core.Test.Web</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between" id="navbarSupportedContent">
-                    <ul class="navbar-nav flex-grow-1 align-items-center me-auto">
+                <div class="navbar-collapse collapse d-lg-inline-flex justify-content-between" id="navbarSupportedContent">
+                    <ul class="navbar-nav flex-grow-1 align-items-lg-center me-auto">
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Admin" asp-page="/Index">Home</a>
                         </li>
@@ -55,7 +55,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container-fluid">
-            &copy; @DateTime.Now.Year - Authorization.Core.UI.Test.Web - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - Authorization.Core.Test.Web - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
