--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Index.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Index.cshtml
@@ -9,7 +9,6 @@
     var classEdit = (await AuthManager.IsAuthorizedAsync(User, SysClaims.User.Update)) ? "" : "disabled";
 }
 
-@* <partial name="_ButtonSvgs" /> *@
 <div class="row align-items-center">
     <div class="col-lg-4">
         <h2>@ViewData["Title"]</h2>
@@ -20,7 +19,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-10 mx-sm-3">
+    <div class="col-lg-11 col-xxl-8 mx-sm-3 pe-sm-4">
         <p>
             <a class="@classCreate" asp-page="Create">Create New</a>
         </p>
