Change table width back to 100% for Role & User Management pages.

--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Index.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Index.cshtml
@@ -22,7 +22,7 @@
         <p>
             <a class="@classCreate" asp-page="Create">Create New</a>
         </p>
-        <table class="table table-sm opacity-0" style="width:98%">
+        <table class="table table-sm w-100 opacity-0" style="width:95%">
             <thead>
                 <tr>
                     <th>
