--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Index.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Index.cshtml
@@ -24,7 +24,7 @@
             <a class="@classCreate" asp-page="Create">Create New</a>
         </p>
 
-        <table class="table table-sm opacity-0" style="width:98%">
+        <table class="table table-sm w-100 opacity-0">
             <thead>
                 <tr>
                     <th>
