--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Details.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Details.cshtml
@@ -10,14 +10,14 @@
     var classEdit = (await AuthManager.IsAuthorizedAsync(User, SysClaims.Role.Update)) ? "" : "disabled";
 }
 
-<div class="row">
-    <div class="col">
+<div class="row align-items-center">
+    <div class="col-sm-4 text-center text-sm-start">
         <h2>@ViewData["Title"]</h2>
         <hr />
     </div>
 </div>
 <div class="row mx-sm-1">
-    <div class="col ac-col-properties me-sm-5">
+    <div class="ac-role-properties me-sm-3 mb-3">
         <h5 class="text-muted">The role's properties:</h5>
         <hr />
         <div class="form-floating">
@@ -37,11 +37,11 @@
             <a class="btn btn-secondary" asp-page="Index">Cancel</a>
         </div>
     </div>
-    <div class="col ac-col-claims">
-        <h5 class="text-center text-muted mb-3">The role's claim assignments:</h5>
+    <div class="ac-role-claims">
+        <h5 class="text-sm-center text-muted mb-3">The role's claim assignments:</h5>
         <hr />
         <div class="row mx-auto">
-            <table class="table table-sm" data-order='[[1,"asc"]]'>
+            <table class="table table-sm w-100" data-order='[[1,"asc"]]'>
                 <thead>
                     <tr>
                         <th class="col-auto" data-orderable="false">
@@ -67,7 +67,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="d-flex d-sm-none ac-button-footer mt-3">
+        <div class="d-flex d-sm-none border-top ac-button-footer mt-4 pt-3">
             <a class="btn btn-primary @classEdit" asp-page="./Edit" asp-route-id="@Model.RoleModel.Id">Edit</a>
             <a class="btn btn-secondary" asp-page="Index">Cancel</a>
         </div>
