--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Delete.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Delete.cshtml
@@ -11,10 +11,10 @@
 }
 
 <div class="row align-items-center">
-    <div class="col-4">
+    <div class="col-sm-4 text-center text-sm-start">
         <h2>@ViewData["Title"]</h2>
     </div>
-    <div class="col text-danger">
+    <div class="col-sm-4 text-center text-danger">
         <h5>@message</h5>
     </div>
     <div class="col-12">
@@ -24,7 +24,7 @@
 <form id="formDelete" method="post">
     <div class="row">
         <div asp-validation-summary="ModelOnly" class="col-12 text-danger"></div>
-        <div class="col ac-col-properties me-sm-5 mb-3">
+        <div class="ac-role-properties me-sm-3 mb-3">
             <h5 class="text-muted">The role's properties:</h5>
             <hr />
             <input type="hidden" asp-for="RoleModel.IsSystemRole" />
@@ -48,11 +48,11 @@
                 <a class="btn btn-secondary" asp-page="Index">Cancel</a>
             </div>
         </div>
-        <div class="col ac-col-users">
-            <h5 class="text-muted text-center mb-3">Users assigned to this role:</h5>
+        <div class="ac-role-users">
+            <h5 class="text-muted text-sm-center mb-3">Users assigned to this role:</h5>
             <hr />
             <div class="mx-auto">
-                <table class="table table-sm" data-order='[[1,"asc"]]'>
+                <table class="table table-sm w-100" data-order='[[1,"asc"]]'>
                     <thead>
                         <tr>
                             <th><label asp-for="RoleModel.RoleUsers.ElementAt(0).Email"></label></th>
@@ -76,7 +76,7 @@
                     </tbody>
                 </table>
             </div>
-            <div class="d-flex d-sm-none ac-button-footer mt-3">
+            <div class="d-flex d-sm-none border-top ac-button-footer mt-4 pt-3">
                 <input class="btn btn-primary" id="btnDelete" type="submit" value="Delete" @btnDeleteAttr />
                 <a class="btn btn-secondary" asp-page="Index">Cancel</a>
             </div>
