--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Delete.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Delete.cshtml
@@ -12,10 +12,10 @@
 }
 
 <div class="row align-items-center">
-    <div class="col-sm-4">
+    <div class="col-sm-4 text-center text-sm-start">
         <h3>@ViewData["Title"]</h3>
     </div>
-    <div class="col text-danger ac-warning-message">
+    <div class="col-sm-4 text-center text-danger">
         <h5>@message</h5>
     </div>
     <div class="col-12">
@@ -25,7 +25,7 @@
 <form id="formDelete" method="post">
     <div class="row">
         <div asp-validation-summary="ModelOnly" class="col-12 text-danger"></div>
-        <div class="col-auto ac-col-properties me-sm-5 mb-3">
+        <div class="ac-user-properties me-sm-3 mb-3">
             <h5 class="text-muted">Update the user's details:</h5>
             <hr />
             <input type="hidden" asp-for="UserModel.IsSystemUser" />
@@ -87,8 +87,8 @@
                 <a class="btn btn-secondary" asp-page="./Index">Cancel</a>
             </div>
         </div>
-        <div class="col ac-col-roles mb-3">
-            <h5 class="text-muted text-center mb-3">Select the user's role assignments:</h5>
+        <div class="ac-user-roles">
+            <h5 class="text-muted text-sm-center mb-3">Select the user's role assignments:</h5>
             <hr />
             <div class="mx-auto">
                 <table class="table table-sm" data-order='[[1,"asc"]]'>
@@ -123,7 +123,7 @@
                 </table>
             </div>
             <div class="row">
-                <div class="col-auto d-block d-sm-none align-items-center mt-3">
+                <div class="d-flex d-sm-none border-top ac-button-footer mt-4 pt-3">
                     <input class="btn btn-primary" id="btnDelete" type="submit" value="Delete" @btnDeleteAttr />
                     <a class="btn btn-secondary" asp-page="./Index">Cancel</a>
                 </div>
