--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Index.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Index.cshtml
@@ -8,9 +8,8 @@
     var classDetails = (await AuthManager.IsAuthorizedAsync(User, SysClaims.User.Read)) ? "" : "disabled";
     var classEdit = (await AuthManager.IsAuthorizedAsync(User, SysClaims.User.Update)) ? "" : "disabled";
 }
-
 <div class="row align-items-center">
-    <div class="col-lg-4">
+    <div class="col-sm-4 text-center text-sm-start">
         <h2>@ViewData["Title"]</h2>
     </div>
     <partial name="_NotificationPartial" />
@@ -23,7 +22,6 @@
         <p>
             <a class="@classCreate" asp-page="Create">Create New</a>
         </p>
-
         <table class="table table-sm w-100 opacity-0">
             <thead>
                 <tr>
